--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "1.0.0",
   "description": "proxy-example: An Ionic project",
   "dependencies": {
-    "express": "^4.11.2",
-    "gulp": "^3.8.11",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^0.7.1",
+    "node-sass": "^3.11.2",
+    "express": "^4.14.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
     "replace": "^0.3.0"
   },
   "devDependencies": {
-    "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "bower": "^1.8.0",
+    "gulp-util": "^3.0.7",
+    "shelljs": "^0.7.5"
   },
   "scripts": {
     "start": "npm run ionicserver && npm run nodeserver",
